--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
       <th id ="svgInsertion1"></th>
     </table>
 </body>
+
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+
+
    <script src="https://d3js.org/d3.v6.js">
   
   
@@ -98,7 +105,7 @@ var t = '';function select_figure_remote(cont1Name,cont2Name, selector, url)
 
 }
 
-var limit = 20;
+var limit = 0;
 
 
   function displayCont(countryName,TT,inputCounter) 
@@ -110,7 +117,7 @@ var limit = 20;
     if(inputCounter >= limit)
     {
       counter = limit;
-      p = "<h4> limit of countries reached</h4><h4> (only displaying " + limit.toString() + " ) </h4>";
+      p = "<h4> limit of countries reached</h4><h4> (only displaying " + limit.toString() + " as per user-defined limit) </h4>";
     }
     var Ident = [];
     
@@ -171,6 +178,10 @@ var limit = 20;
         )
       })
   }
+
+
+
+
    </script>
 
    <!DOCTYPE html>
@@ -270,6 +281,15 @@ var limit = 20;
 </div>
 </td>
 
+<td>
+  <div >
+    <input id="#numInput" type="number"  min="0" value="20" >
+  </div>
+</div>
+</td>
+
+
+
 
 </td>
 
@@ -305,6 +325,7 @@ function showOption() {
 
 function submitCalc(cont1Name, cont2Name, option)
 {
+  limit = document.getElementById("#numInput").value;
   console.log(cont1Name);
   console.log(cont2Name);
   console.log(option);
