--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     </table>
 </body>
 
-<script
-  src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
+
 
 
    <script src="https://d3js.org/d3.v6.js">
@@ -127,7 +124,7 @@ var limit = 0;
       var svgIdentifier = Math.random(); // This variable is used to give each of the added svgs their own individual identifier per function call
       svgIdentifier = svgIdentifier.toString(36).substr(2,9);
       Ident.push(svgIdentifier);
-      var svgLine = "<svg id=\"svg" +svgIdentifier+"\" style=\"width: 1000px; height: 500px; border: solid; border-color: black; display:inline\"></svg>"; //Creates a new svg with thier new identifier
+      var svgLine = "<svg id=\"svg" +svgIdentifier+"\" style=\"width: 1000px; height: 500px; display:inline\"></svg>"; //Creates a new svg with thier new identifier
        p+= svgLine;
       }
       document.getElementById(TT).innerHTML = p;
@@ -283,6 +280,7 @@ var limit = 0;
 
 <td>
   <div >
+    <p>User-defined limit for max # of countries to display</p>
     <input id="#numInput" type="number"  min="0" value="20" >
   </div>
 </div>
